--- a/Views/Admin/TurEkle.cshtml
+++ b/Views/Admin/TurEkle.cshtml
@@ -40,12 +40,14 @@
                                 <div class="col-sm-10">
                                     <input type="text" asp-for="TurAdi" class="form-control" placeholder="Tür Adı">
                                 </div>
+                                <span asp-validation-for="TurAdi" class="text-danger"></span>
                             </div>
                             <div class="form-group row">
                                 <label class="col-sm-2 col-form-label">Sıra</label>
                                 <div class="col-sm-10">
                                     <input type="text" asp-for="Sira" class="form-control" placeholder="Sıra">
                                 </div>
+                                <span asp-validation-for="Sira" class="text-danger"></span>
                             </div>
 
                         </div>
