--- a/Views/Admin/TurEkle.cshtml
+++ b/Views/Admin/TurEkle.cshtml
@@ -53,7 +53,7 @@
                         </div>
                         <!-- /.card-body -->
                         <div class="card-footer">
-                            <button type="submit" class="btn btn-default">Vazgeç</button>
+                            <a onclick="history.back()" class="btn btn-default">Vazgeç</a>
                             <button type="submit" class="btn btn-info float-right">Kaydet</button>
                         </div>
                         <!-- /.card-footer -->
