--- a/Views/Admin/TurForm.cshtml
+++ b/Views/Admin/TurForm.cshtml
@@ -7,13 +7,13 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Tür Ekle</h1>
+                <h1 class="m-0">@ViewBag.PageTitle</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="/Admin">Anasayfa</a></li>
                     <li class="breadcrumb-item"><a href="/Admin/Turler">Türler</a></li>
-                    <li class="breadcrumb-item active">Tür Ekle</li>
+                    <li class="breadcrumb-item active">@ViewBag.PageTitle</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
